refactored and updated doc a bit
